just try another page like application form

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -3,11 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <title>SATHEESHKUMAR-T </title>
+    <link rel="stylesheet" type="text/css" href="STYLES/style.css">
 <body>
-    <h1>SATHEESHKUMAR </h1>
-    <br>
-    <h2>NOW I TRY </h2>
+<div class="container">
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li> 
+            <li><a href="#">Studies</a></li>
+            <li><a href="#">Experience</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+    <div>
+    <center><img src="IMG/satheesh.jpg" height="200px" width="200px"></center>
+    <table align="center">
+        <tr>
+            <td>Name</td>
+            <td>:</td>
+            <td>SATHEESHKUMAR-T</td>
+        </tr> 
+        <tr>
+            <td>Qualification</td>
+            <td>:</td>
+            <td>Bachelor of Science in Information Technology</td>
+        </tr>
+        <tr>
+            <td>Location</td>
+            <td>:</td>
+            <td>Tirupur</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+    </div>
+
+</div>
 </body>
 </html>
