--- a/application.html
+++ b/application.html
@@ -43,7 +43,7 @@
         <nav class="nav">
         <ul id="ul1">
             <li><a href="../index.html">Home</a></li> 
-            <li><a href="STUDIES.html">Studies</a></li>
+            <li><a href="/STUDIES.html">Studies</a></li>
             <li><a href="#">Experience</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
