--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -13,7 +13,7 @@
         <ul id="ul1">
             <li><a href="../index.html">Home</a></li> 
             <li><a href="#">Studies</a></li>
-            <li><a href="#">Experience</a></li>
+            <li><a href="STUDIES. html">Experience</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
         </nav>
