--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -60,7 +60,7 @@
         </tr>  
     </table> 
     </div>
-<div><h1><marquee width="80%" bgcolor="violet"><b> The page is Under maintainance</b></marquee></h1> </div>
+<div><h1><marquee width="100%" color="red" bgcolor="violet"><b> The page is Under maintainance</b></marquee></h1> </div>
 </div> 
 </body>
 </html>
