--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -12,10 +12,10 @@
      <div>
         <nav class="nav">
         <ul id="ul1">
-            <li><a href="../index.html">Home</a></li> 
-            <li><a href="#">Studies</a></li>
-            <li><a href="#">Experience</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="https://htmlpreview.github.io/?https://github.com/satheeshkumarthangaraj/WEBPAGES-PRACTICE/blob/main/INDEX.HTML">Home</a></li> 
+            <li><a href="https://htmlpreview.github.io/?https://github.com/satheeshkumarthangaraj/WEBPAGES-PRACTICE/blob/main/STUDIES.html">Studies</a></li>
+            <li><a href="https://htmlpreview.github.io/?https://github.com/satheeshkumarthangaraj/WEBPAGES-PRACTICE/blob/main/EXPERIENCE.html">Experience</a></li>
+            <li><a href="https://htmlpreview.github.io/?https://github.com/satheeshkumarthangaraj/WEBPAGES-PRACTICE/blob/main/CONTACT.html">Contact</a></li>
         </ul>
         </nav>
      </div>
