--- a/CONTACT.html
+++ b/CONTACT.html
@@ -18,6 +18,11 @@
             <li><a href="CONTACT.html">Contact</a></li>
         </ul>
         </nav>
+      <div>
+          <li><a><img src="IMG/instagram .jpg"></a></li>
+          <li><a><img src="IMG/linkedin.png"></a></li>
+      </div>   
      </div>
+  <
 </body>
 </html>
