--- a/CONTACT.html
+++ b/CONTACT.html
@@ -19,10 +19,10 @@
         </ul>
         </nav>
       <div>
-          <li><a><img src="IMG/instagram .jpg"></a></li>
-          <li><a><img src="IMG/linkedin.png"></a></li>
+          <li><a ><img src="IMG/instagram .jpg" ></a></li>
+          <li><a href="www.linkedin.com/in/satheeshkumar-t"> <img src="IMG/linkedin.png"></a></li>
       </div>   
      </div>
-  <
+  </div>
 </body>
 </html>
