--- a/STUDIES.html
+++ b/STUDIES.html
@@ -14,20 +14,11 @@
         <ul id="ul1">
             <li><a href="../index.html">Home</a></li> 
             <li><a href="STUDIES.html">Studies</a></li>
-<<<<<<< HEAD
-            <li><a href="EXPERIENCE.html">Experience</a></li>
-            <li><a href="CONTACT.html">Contact</a></li>
+            <li><a href="Experience.html">Experience</a></li>
+            <li><a href="Contact.html">Contact</a></li>
         </ul>
         </nav>
-     </div>
-</body>
-=======
-            <li><a href="#">Experience</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-        </nav>
-       
-    </div>
+</div>
     <div>
         <img src="IMG/Degree Image   .jpeg" alt="" height="1000px" width="1000px">
     </div>
