Company updated in index.html

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -39,19 +39,19 @@
 
             <td id="td1">Role</td>
             <td id="td2">:</td>
-            <td id="td3">BusinessExecutive </td>
+            <td id="td3">Shine Specialist </td>
         </tr> 
         <tr>
             <td id="td1">Company</td>
             <td id="td2">:</td>
-            <td id="td3">Shriram finanace Limited</td>
+            <td id="td3">Shineloop</td>
         </tr>   
         <tr>
 
 
             <td id="td1">Location</td>
             <td id="td2">:</td>
-            <td id="td3">Tirupur</td>
+            <td id="td3">Chennai</td>
         </tr>
         <tr>
             <td id="td1"></td>
